mention can use TensorBoard to visualize

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -10,6 +10,8 @@
 
 - to visualize embeddings (.tsv files): https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
 
+  - or use TensorBoard locally: `tensorboard --logdir logs`
+
 - sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
 
 - IMDB review dataset: https://ai.stanford.edu/~amaas/data/sentiment/
@@ -190,6 +192,8 @@ words.close()
 ## to then visualize those exported .tsv files:
 
 https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
+
+or use TensorBoard locally: `tensorboard --logdir logs`
 
 ## RNN and LSTM to take word order into account
 
