--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -10,7 +10,7 @@
 
 - to visualize embeddings (.tsv files): https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
 
-  - or use TensorBoard locally: `tensorboard --logdir logs`
+  - or use TensorBoard locally: `tensorboard --logdir logs` and open http://localhost:6006
 
 - sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
 
@@ -193,7 +193,7 @@ words.close()
 
 https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
 
-or use TensorBoard locally: `tensorboard --logdir logs`
+or use TensorBoard locally: `tensorboard --logdir logs` and open http://localhost:6006
 
 ## RNN and LSTM to take word order into account
 
