tpython code to get embedding projector to work with local tensorboard

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -10,7 +10,7 @@
 
 - to visualize embeddings (.tsv files): https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
 
-  - or use TensorBoard locally: `tensorboard --logdir logs` and open http://localhost:6006
+  - or use TensorBoard locally: (see notes on Python code you must run first, see below for visualization with TensorBoard) and then `tensorboard --logdir logs` and open http://localhost:6006/#projector
 
 - sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
 
@@ -193,7 +193,34 @@ words.close()
 
 https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
 
-or use TensorBoard locally: `tensorboard --logdir logs` and open http://localhost:6006
+or use TensorBoard locally: (include the following Python code when running the model) and then `tensorboard --logdir logs/imdb-example` and http://localhost:6006/#projector but you need to first create a checkpoint while running your model!
+
+```py
+# this is a slightly tweaked version of the code in the documentation: https://www.tensorflow.org/tensorboard/tensorboard_projector_plugin
+
+from tensorboard.plugins import projector
+
+log_dir = 'logs/imdb-example/' # DON'T include a "/" before "logs" otherwise get misleading "read-only" error message
+if not os.path.exists(log_dir):
+    os.makedirs(log_dir) # this doesn't seem to work in PyCharm
+
+# Save the weights we want to analyze as a variable. Note that the first
+# value represents any unknown word, which is not in the metadata, here
+# we will remove this value.
+weights_as_var = tf.Variable(model.layers[0].get_weights()[0][1:])
+# Create a checkpoint from embedding, the filename and key are the
+# name of the tensor.
+checkpoint = tf.train.Checkpoint(embedding=weights_as_var)
+checkpoint.save(os.path.join(log_dir, "embedding.ckpt"))
+
+# Set up config.
+config = projector.ProjectorConfig()
+embedding = config.embeddings.add()
+# The name of the tensor will be suffixed by `/.ATTRIBUTES/VARIABLE_VALUE`.
+embedding.tensor_name = "embedding/.ATTRIBUTES/VARIABLE_VALUE"
+embedding.metadata_path = 'metadata.tsv'
+projector.visualize_embeddings(log_dir, config)
+```
 
 ## RNN and LSTM to take word order into account
 
