data generation/augmentation code snippet

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -44,6 +44,58 @@
 
   - my colab assignment solution: https://colab.research.google.com/drive/1_lpUhJmctFI8ARWx0Da7SSyVMxqLE15s (basically the same code as before but with data augmentation added to avoid overfitting)
 
+```py
+import tensorflow as tf
+from tensorflow.keras.preprocessing.image import ImageDataGenerator
+
+# basically: generator = ImageDataGenerator(...).flow_from_directory(...)
+
+train_datagen = ImageDataGenerator(
+  rescale=1.0/255.,
+  rotation_range=40,
+  width_shift_range=0.2, # percent to move left/right
+  height_shift_range=0.2, # percent to move up/down
+  shear_range=0.2, # percent to shear
+  zoom_range=0.2, # percent to zoom
+  horizontal_flip=True, # True = enabled
+  fill_mode='nearest' # mode for filling in pixels that become empty after transformations
+)
+
+train_generator = train_datagen.flow_from_directory(
+  directory=TRAINING_DIR,
+  batch_size=90,
+  class_mode='binary',
+  target_size=(150, 150)
+)
+
+validation_datagen = ImageDataGenerator(
+  rescale=1.0/255.,
+  rotation_range=40,
+  width_shift_range=0.2, # percent to move left/right
+  height_shift_range=0.2, # percent to move up/down
+  shear_range=0.2, # percent to shear
+  zoom_range=0.2, # percent to zoom
+  horizontal_flip=True, # True = enabled
+  fill_mode='nearest' # mode for filling in pixels that become empty after transformations
+)
+
+validation_generator = validation_datagen.flow_from_directory(
+  directory=VALIDATION_DIR,
+  batch_size=10,
+  class_mode='binary',
+  target_size=(150, 150)
+)
+
+# ...
+
+history = model.fit(
+  train_generator,
+  epochs=15,
+  verbose=1,
+  validation_data=validation_generator
+)
+```
+
 ## 3) transfer learning
 
 - **transfer learning** lets you use pre-existing models that were pre-trained on lots of data and extracted many features, lock the earlier layers of those models (`base_model.trainable = False` or `for layer in pre_trained_model.layers: layer.trainable = False`), and then add your own layers (`Model(inputs=pre_trained_model.input, outputs=x_extra_layers)`), to let you train faster and also get better accuracy for your specific smaller dataset/application
