transfer learning code snippet summary

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -106,6 +106,33 @@ history = model.fit(
 
     - uses `x = layers.Dropout(0.3)(x)`:
 
+```py
+pre_trained_model = InceptionV3(
+  input_shape = (150, 150, 3),
+  include_top = False,
+  weights = None
+)
+
+pre_trained_model.load_weights(local_weights_file)
+
+for layer in pre_trained_model.layers:
+  layer.trainable = False # make each layer in pre-trained model NOT trainable
+
+pre_trained_model.summary() # look at the printout - the 1st/LEFTmost column shows layer names - look for "mixed7"
+
+last_desired_layer = pre_trained_model.get_layer('mixed7')
+last_output = last_desired_layer.output
+
+x = layers.Flatten()(last_output)
+x = layers.Dense(1024, activation='relu')(x)
+x = layers.Dropout(0.3)(x)
+x = layers.Dense(1, activation='sigmoid')(x)
+
+final_model = Model(inputs=pre_trained_model.input, outputs=x)
+model.compile(...)
+history = model.fit(...)
+```
+
 - **dropout**: pretend a random number of neurons are removed, to prevent neighbouring neurons from affecting each other's weights and reduce "specialization" and to prevent "over-reliance" on any one neuron (you can also change the probabilities per layer) = [regularization](https://github.com/hchiam/machineLearning/blob/master/more_notes/googleMLCrashCourse.md#:~:text=regularization%20%3D%20penalizing%20model%20complexity)
 
   - more details: https://www.youtube.com/watch?v=ARq74QuavAo
