Links to other notes

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -149,3 +149,11 @@ history = model.fit(...)
 
   - `categorical_crossentropy` gives you `[0, 1, 0, 0, 0]` and `[.2, .5, .1, .1, .1]`
   - `sparse_categorical_crossentropy` gives you `[1]` and `[.5]`
+
+## Links to other notes
+
+https://github.com/hchiam/learning-tensorflow/tree/main/my_coursera_notes
+
+https://github.com/hchiam/learning-tensorflow/blob/main/my_coursera_notes/C3.md
+
+https://github.com/hchiam/learning-tensorflow/blob/main/my_coursera_notes/C4.md
