Links to other notes

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -390,3 +390,11 @@ print(continued_sentence(seed_text, next_few_words))
 ```
 
 - my colab assignment solution: https://colab.research.google.com/drive/1H5Z0-cbwxQC7ApMtsH9oznJWnqsf0nsM
+
+## Links to other notes
+
+https://github.com/hchiam/learning-tensorflow/tree/main/my_coursera_notes
+
+https://github.com/hchiam/learning-tensorflow/blob/main/my_coursera_notes/C2.md
+
+https://github.com/hchiam/learning-tensorflow/blob/main/my_coursera_notes/C4.md
