Links to other notes

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -202,3 +202,11 @@ Advanced: https://www.coursera.org/specializations/tensorflow-advanced-technique
 - distributed
 - image segmentation, object localization
 - generative, transfer
+
+## Links to other notes
+
+https://github.com/hchiam/learning-tensorflow/tree/main/my_coursera_notes
+
+https://github.com/hchiam/learning-tensorflow/blob/main/my_coursera_notes/C2.md
+
+https://github.com/hchiam/learning-tensorflow/blob/main/my_coursera_notes/C3.md
