Now use `model.predict_classes` and `tokenizer.index_word`:

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -362,6 +362,8 @@ model.fit(xs, ys, epochs=50)
 # use 500 epochs when it takes longer to converge because very little data
 ```
 
+Now use `model.predict_classes` and `tokenizer.index_word`:
+
 ```py
 seed_text = 'Laurence went to dublin'
 next_few_words = 10
