--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -177,7 +177,7 @@ plt.axis([1e-8, 1e-3, 0, 300])
 # plot loss over time for one given learning rate:
 ignore_first_few = 10
 loss_history = history.history['loss']
-epochs = range(ignore_first_few, len(loss_history)
+epochs = range(ignore_first_few, len(loss_history))
 plt.plot(epochs, loss_history[ignore_first_few:], 'b', label='training loss')
 plt.show()
 
