save model at checkpoints of every 10 epoch and saving only the best val_accuracy

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -190,6 +190,29 @@ Read this tutorial: https://www.tensorflow.org/text/tutorials/transformer
 
 ## Further learning
 
+Save model at checkpoints of every 10 epoch and saving only the best val_accuracy:
+
+```py
+model.compile(
+    optimizer='adam',
+    loss='sparse_categorical_crossentropy',
+    metrics=['accuracy']
+)
+
+model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(
+    filepath="mymodel.h5",
+    monitor='val_accuracy',
+    mode='max',
+    verbose=2,
+    save_freq='epoch',
+    period=10,
+    save_best_only=True)
+
+history = model.fit(ds_train, epochs=200, verbose=2,
+                    validation_data=(ds_validation,),
+                    callbacks=[model_checkpoint_callback])
+```
+
 Deploy: https://www.coursera.org/specializations/tensorflow-data-and-deployment
 
 - [JS](https://www.coursera.org/learn/browser-based-models-tensorflow?specialization=tensorflow-data-and-deployment)
