ModelCheckpoint doc link

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -190,7 +190,7 @@ Read this tutorial: https://www.tensorflow.org/text/tutorials/transformer
 
 ## Further learning
 
-Save model at checkpoints of every 10 epoch and saving only the best val_accuracy:
+Save model at [checkpoints](https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/ModelCheckpoint) of every 10 epoch and saving only the best val_accuracy:
 
 ```py
 model.compile(
