Load a TensorFlow model you previously trained with existing weights so you can continue training it

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -213,6 +213,14 @@ history = model.fit(ds_train, epochs=200, verbose=2,
                     callbacks=[model_checkpoint_callback])
 ```
 
+Load a TensorFlow model you previously trained with existing weights so you can continue training it:
+
+```py
+model = keras.models.load_model('mymodel.h5')
+# comment-out model = tf.keras.models.Sequential([
+# comment-out model.compile(
+```
+
 Deploy: https://www.coursera.org/specializations/tensorflow-data-and-deployment
 
 - [JS](https://www.coursera.org/learn/browser-based-models-tensorflow?specialization=tensorflow-data-and-deployment)
