reading training vs validation curves for diagnosing ML models

--- a/my_coursera_notes/C4.md
+++ b/my_coursera_notes/C4.md
@@ -190,6 +190,8 @@ Read this tutorial: https://www.tensorflow.org/text/tutorials/transformer
 
 ## Further learning
 
+reading training vs validation curves for diagnosing ML models: https://machinelearningmastery.com/learning-curves-for-diagnosing-machine-learning-model-performance/
+
 Save model at [checkpoints](https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/ModelCheckpoint) of every 10 epoch and saving only the best val_accuracy:
 
 ```py
